added config data in _config.yml

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -4,7 +4,9 @@
     </header>
 
     {% include publications.html %}
+    {% include skills.html %}
     {% include education.html %}
+
 
 
 </article>
