--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,16 @@
+{% assign data = site.data.about.me %}
+
 <aside class="sidebar" data-sidebar>
     <div class="sidebar-info">
 
         <figure class="avatar-box">
-            <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+            <img src="{{ data.image }}" alt="{{ data.name }}" width="80">
         </figure>
 
         <div class="info-content">
-            <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+            <h1 class="name" title="{{ data.name }}">{{ data.name }}</h1>
 
-            <p class="title">Web developer</p>
+            <p class="title">{{ data.designation }}</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -24,22 +26,25 @@
         <div class="separator"></div>
 
         <ul class="contacts-list">
-
+            {% for item in data.contacts %}
             <li class="contact-item">
 
                 <div class="icon-box">
-                    <ion-icon name="mail-outline"></ion-icon>
+                    <ion-icon name="{{ item.icon }}"></ion-icon>
                 </div>
 
                 <div class="contact-info">
-                    <p class="contact-title">Email</p>
+                    <p class="contact-title">{{ item.label }}</p>
 
-                    <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+                    <a href="{{ item.link }}" class="contact-link">{{ item.value }}</a>
                 </div>
 
             </li>
+            {% endfor %}
 
-            <li class="contact-item">
+
+
+            <!-- <li class="contact-item">
 
                 <div class="icon-box">
                     <ion-icon name="phone-portrait-outline"></ion-icon>
@@ -79,7 +84,7 @@
                     <address>Sacramento, California, USA</address>
                 </div>
 
-            </li>
+            </li> -->
 
         </ul>
 
@@ -87,23 +92,14 @@
 
         <ul class="social-list">
 
+            {% for item in data.socials %}
             <li class="social-item">
-                <a href="#" class="social-link">
-                    <ion-icon name="logo-facebook"></ion-icon>
+                <a href="{{ item.link }}" class="social-link">
+                    <ion-icon name="{{ item.icon }}"></ion-icon>
                 </a>
             </li>
+            {% endfor %}
 
-            <li class="social-item">
-                <a href="#" class="social-link">
-                    <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-            </li>
-
-            <li class="social-item">
-                <a href="#" class="social-link">
-                    <ion-icon name="logo-instagram"></ion-icon>
-                </a>
-            </li>
 
         </ul>
 
