--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -377,6 +377,7 @@ main {
   color: var(--white-1);
   background: var(--onyx);
   font-size: var(--fs-8);
+  text-align: center;
   font-weight: var(--fw-300);
   width: max-content;
   padding: 3px 12px;
